src/components/ProjectInfoBar.css
.InfoBar-Container
{
    display:flex;
    width: 100%;
    height: fit-content;
    gap: 1.5rem;
    align-items: center;
    justify-content: space-around;
}

.InfoBar-Divider
{
    border: none;
    flex-grow: 1;
    background-image: repeating-linear-gradient(
        to right,
        #ffffff 0px,
        #ffffff 5px,
        transparent 5px,
        transparent 10px
    );
    height: 1px; /* Adjusts the height of the line */
}

.InfoBar-MiniGroup
{
    display:flex;
    align-items: center;
    gap: .375rem;
}

